--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,14 @@ dist.jar=${dist.dir}/UniversidadGrupo21.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Admin\\Desktop\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\fojos\\Downloads\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\fojos\\Downloads\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.0.11.jar}
+    ${file.reference.mariadb-java-client-3.0.11.jar}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
