--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Admin\\Desktop\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\fojos\\Downloads\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\NICOLAS\\Desktop\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-1}
+    ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
