--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/UniversidadGrupo21.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\NICOLAS\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Admin\\Desktop\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\fojos\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\NICOLAS\\Desktop\\mariadb-java-client-3.2.0.jar
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar}
+    ${file.reference.mariadb-java-client-3.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
