--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,10 @@ dist.jar=${dist.dir}/UniversidadGrupo21.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\NICOLAS\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\fojos\\OneDrive\\Documentos\\lib\\jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=C:\\Users\\fojos\\OneDrive\\Documentos\\lib\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=C:\\Users\\fojos\\OneDrive\\Documentos\\lib\\jgoodies-looks-2.4.1.jar
+file.reference.junit-4.6.jar=C:\\Users\\fojos\\OneDrive\\Documentos\\lib\\junit-4.6.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Admin\\Desktop\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\fojos\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\NICOLAS\\Desktop\\mariadb-java-client-3.2.0.jar
@@ -37,7 +41,11 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
